--- a/site/client/css/sidebar.scss
+++ b/site/client/css/sidebar.scss
@@ -8,13 +8,6 @@
 
     &.sticky {
         background: $primary-color-100;
-
-        .entry-toc {
-            &::-webkit-scrollbar {
-                display: block;
-            }
-            @include scrollbar($primary-color-200, $primary-color-100);
-        }
     }
 
     .entry-toc {
@@ -24,11 +17,6 @@
         line-height: 1.3em;
         padding: $vertical-spacing 0;
         overflow-y: auto;
-        scrollbar-width: none; // Firefox (non standard)
-        &::-webkit-scrollbar {
-            // Chromium (non standard)
-            display: none;
-        }
     }
 
     li {
